# bantzv2

./: .env.example  .gitattributes  .gitignore  .gitmodules  .last_session_log.txt  AUDIT.md  Bantz_en_linux_v4_0_0.ppn  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_CONTEXT.md  DEVELOPMENT.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  TODO.md  bantz_v3_issue_future_spacy_celery.md  bantz_v3_issue_tui_migration.md  bantz_v3_issues.md  bantzv3_master_plan.html  commit_and_pr.sh  coverage.xml  docker-compose.yml  fix.py  fix_brain.py  fix_import_again.py  fix_import_correct.py  fix_import_finally.py  fix_routing.py  fix_routing2.py  fix_routing3.py  fix_tests.py  fix_tests2.py  install.sh  latest_bantz_chat.txt  patch.diff  patch.py  (+21 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  test.yml
.jules/: bolt.md  sentinel.md
bantz-ui/: package-lock.json  package.json  tailwind.config.js
bantz-ui/src/: App.tsx  index.css  main.tsx
bantz-ui/src-tauri/: tauri.conf.json
config/: feeds.yaml
db/migrations/: 001_initial_schema.cypher  002_fulltext_index.cypher
deploy/: README-mail.md  bantz-desktop.service  bantz-ssh-tunnel@.service  bantz-telegram@.service  bantz@.service  mbsync-bantz.service  mbsync-bantz.timer  vlm_colab.ipynb  vlm_server.py
eval/loop_eval/: RUNBOOK.md  SCHEMA.md  TAXONOMY.md  analyze.py  checks.py  figures.py  fixtures.py  label_sheet.py  preflight.py  runlock.py  runner.py  sandbox.py  schema.py  variants.py
paper1_eval/: __init__.py  export_pairs.py  label_tui.py  labels.py  metrics.py
scripts/: train_wakeword.py  xtts_server.py
src/bantz/: __main__.py  app.py  config.py  screen_control.py  screen_query.py  vision_executor.py
tests/: conftest.py  test_accessibility.py  test_app_detector.py  test_brain_integrations.py  test_header.py  test_input_control.py  test_job_scheduler.py  test_json_migration.py  test_mood.py  test_notifier.py  test_overnight_poll.py  test_rl_engine.py  test_spatial_cache.py  test_store.py  test_telemetry.py  test_toast.py  test_tts.py  test_vector_memory.py  test_vision.py
tests/agent/: test_affinity_engine.py  test_agent_manager.py  test_ambient.py  test_ambient_integration.py  test_app_detector.py  test_audio_ducker.py  test_awareness.py  test_dynamic_replanning.py  test_executor.py  test_ghost_loop.py  test_health.py  test_interventions.py  test_job_scheduler.py  test_jury.py  test_notifier.py  test_observer.py  test_planner.py  test_proactive.py  test_rl_engine.py  test_standalone_ambient.py  test_stt_idle_unload.py  test_sub_agent.py  test_tts.py  test_wake_word.py
tests/auth/: test_token_store.py
tests/cli/: test_setup_voice.py
tests/core/: test_affinity_rl_activation.py  test_agent_route.py  test_autonomy_dial.py  test_brain_integrations.py  test_briefing_category_filter.py  test_config_cli.py  test_context.py  test_core_stabilization.py  test_eval_view.py  test_event_bus.py  test_event_bus_corr.py  test_finalizer_logging.py  test_gps_server.py  test_intent.py  test_location_handler.py  test_loop_breaker.py  test_memory_injector.py  test_notification_manager.py  test_once_progress.py  test_prompt_builder.py  test_recovery_loop.py  test_regex_audit.py  test_rl_hooks.py  test_rlhf_feedback.py  test_route_log.py  test_router.py  test_routing_engine.py  test_secure_io.py  test_skip_fastpath.py  test_systemd.py  test_terse_followup_routing.py  test_tool_loop_config.py  test_translation_layer.py  test_voice_master_switch.py
tests/data/: test_async_executor.py  test_json_migration.py  test_store.py
tests/desktop/: test_generator.py  test_hyprctl.py  test_hyprland_tool.py  test_installer.py  test_launcher.py  test_widgets.py
tests/eval/: test_analyze.py  test_corpus.py  test_figures.py  test_fixtures.py  test_label_sheet.py  test_preflight.py  test_runlock.py  test_runner.py  test_sandbox.py
tests/integrations/: test_telegram_bot_shim.py
tests/interface/: test_active_chat_store.py  test_stream_sentences.py  test_telegram_llm.py  test_telegram_screenshot.py  test_telegram_spam.py
tests/llm/: test_gemini.py  test_lane.py
tests/memory/: test_bridge_smoke.py  (+10 more)
(+243 files in other folders)
