[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bantz"
version = "0.1.0"
description = "Local-first AI assistant — your terminal, your host."
requires-python = ">=3.11"
dependencies = [
    "textual>=0.59.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "python-telegram-bot>=20.0",
    "mempalace>=3.0.0",
]

[project.optional-dependencies]
translation = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
docs = [
    "pymupdf>=1.24.0",
    "python-docx>=1.0.0",
]
automation = [
    "pyautogui>=0.9.54",
    "pynput>=1.7.0",
]

[project.scripts]
bantz = "bantz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bantz"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["bantz"]
omit = [
    "src/bantz/__main__.py",
    "src/bantz/interface/tui/app.py",
    "src/bantz/tools/gmail.py",
    "src/bantz/tools/calendar.py",
    "src/bantz/tools/classroom.py",
    "src/bantz/tools/document.py",
    "src/bantz/tools/news.py",
    "src/bantz/tools/weather.py",
    "src/bantz/tools/web_search.py",
    "src/bantz/tools/reminder.py",
    "src/bantz/tools/filesystem.py",
    "src/bantz/tools/system.py",
    "src/bantz/auth/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "pass",
    "except ImportError",
    "except Exception",
]